[package]
name = "app"
publish = false
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.70", features = ["backtrace"] }
askama = "0.12.1"
axum = "0.7.1"
base62 = "2.0.2"
camino = "1.1.4"
chrono = { version = "0.4.23", features = ["serde"] }
clap = { version = "4.3.17", features = ["derive"] }
etag = "4.0.0"
glob = "0.3.0"
html-escape = "0.2.13"
http-body-util = "0.1.0"
hyper = "1.0.1"
log = "0.4.17"
mime_guess = "2.0.4"
pulldown-cmark = "0.11.0"
serde = { version = "1.0.185", features = ["derive"] }
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.8"
tower-http = { version = "0.5.0", features = [
    "compression-gzip",
    "compression-zstd",
    "trace",
] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
# opt-level = "s"
