[package]
name = "app"
publish = false
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.70", features = ["backtrace"] }
axum = { version = "0.8.1", features = [
	"tokio",
	"tower-log",
	"tracing",
	"http2",
] }
base62 = "2.0.2"
camino = "1.1.4"
chrono = { version = "0.4.23", features = ["serde"] }
etag = "4.0.0"
glob = "0.3.2"
html-escape = "0.2.13"
http-body-util = "0.1.2"
hyper = "1.0.1"
log = "0.4.17"
lol_html = "2.0.0"
md5 = "0.7.0"
mime = "0.3.17"
mime_guess = "2.0.4"
pulldown-cmark = "0.13.0"
regex = "1.11.1"
rinja = "0.3.4"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "1.27.0", features = ["macros", "fs", "rt-multi-thread"] }
toml = "0.8.8"
tower = "0.5.1"
tower-http = { version = "0.6.0", features = ["compression-gzip", "trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
url = "2.5.2"

[profile.release]
strip = true
lto = true
codegen-units = 1
# opt-level = "z"
