[package]
name = "app"
publish = false
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.70", features = ["backtrace"] }
axum = { version = "0.8.1", features = [
	"tokio",
	"tower-log",
	"tracing",
	"http2",
] }
camino = "1.1.4"
etag = "4.0.0"
glob = "0.3.2"
http-body-util = "0.1.2"
hyper = "1.0.1"
log = "0.4.17"
mime = "0.3.17"
mime_guess = "2.0.4"
regex = "1.11.1"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "1.27.0", features = ["macros", "fs", "rt-multi-thread"] }
tower = "0.5.1"
tower-http = { version = "0.6.0", features = [
	"compression-gzip",
	"compression-br",
	"trace",
] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
# opt-level = "z"
