[package]
name = "app"
publish = false
version = "0.1.0"
edition = "2021"
default-run = "app"

[dependencies]
actix-files = "0.6.0"
actix-web = { version = "4.0.0", features = ["macros", "compress-brotli"] }
actix-web-lab = "0.18.9"
chrono = "0.4.23"
clap = { version = "4.0.29", features = ["derive"] }
env_logger = "0.10"
lightningcss = { version = "1.0.0-alpha.16", features = ["grid", "browserslist"] }
log = "0.4.17"
minijinja = { version = "0.30.0", features = ["builtins", "debug", "key_interning", "deserialization", "macros", "multi-template", "source"] }
parcel_sourcemap = "2.0.2"
r2d2 = "0.8.10"
r2d2_sqlite = "0.21.0"
rusqlite = { version = "0.28.0", features = ["bundled"] }
models = { path = "../models" }
serde = "1.0"
serde_json = "1.0"
swc = "0.245"
swc_common = { version = "0.29", features = ["tty-emitter"] }
