[package]
name = "app"
publish = false
version = "0.1.0"
edition = "2021"
default-run = "app"

[dependencies]
actix-files = "0.6.0"
actix-web = { version = "4.0.0", features = ["compress-brotli"] }
actix-web-lab = "0.19.0"
chrono = "0.4.23"
env_logger = "0.10"
lightningcss = { version = "1.0.0-alpha.16", features = ["grid", "browserslist"] }
log = "0.4.17"
minify-html = "0.10.8"
minijinja = { version = "0.31.0", features = ["builtins", "debug", "key_interning", "deserialization", "macros", "multi-template", "source"] }
parcel_sourcemap = "2.0.2"
sea-orm = { version = "0.11.2", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
serde = "1.0"
serde_json = "1.0"
swc = "0.251"
swc_common = { version = "0.29", features = ["tty-emitter"] }
tokio = "1.27.0"
