[package]
name = "app"
publish = false
version = "0.1.0"
edition = "2021"
default-run = "app"

[dependencies]
anyhow = "1.0.70"
axum = "0.6.15"
chrono = "0.4.23"
env_logger = "0.10"
envmnt = "0.10.4"
hyper = "0.14.26"
lightningcss = { version = "1.0.0-alpha.16", features = ["grid", "browserslist"] }
log = "0.4.17"
mime_guess = "2.0.4"
minify-html = "0.10.8"
minijinja = { version = "0.32.0", features = ["builtins", "debug", "key_interning", "deserialization", "macros", "multi-template", "source"] }
parcel_sourcemap = "2.0.2"
sea-orm = { version = "0.11.2", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
serde = "1.0"
serde_json = "1.0"
swc = "0.251"
swc_common = { version = "0.29", features = ["tty-emitter"] }
tokio = { version = "1.27.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["fs", "set-header", "compression-br", "compression-gzip", "trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
