[package]
name = "setup"
publish = false
version = "0.1.0"
edition = "2021"

[dependencies]
app = { path = "../app" }
anyhow = { version = "1.0.70", features = ["backtrace"] }
camino = "1.1.4"
chrono = "0.4.23"
glob = "0.3.0"
pathdiff = { version = "0.2.1", features = ["camino"] }
pulldown-cmark = "0.9.3"
sea-orm = { version = "0.12.1", features = [
	"sqlx-sqlite",
	"runtime-tokio-rustls",
] }
serde = "1.0.185"
serde_json = "1.0"
syntect = "5.0.0"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
